src/objects/BudgetPlannerConfig__c.object
<CustomObject>
    <description>Object to store the system wide configuration data for the budget planner.
Each record represents a type of bill or expense.  Different minimum values can be entered depending on the type of application and number of applicants.

This object also controls the fields which appear on the application screen, as well as the application form.</description>
    <fields>
        <fullName>Car_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Car Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ignore_total_Commitment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore total Commitment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsStressed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsStressed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Joint_App_1_Dep_ONS__c</fullName>
        <label>Joint App 1 Dep ONS</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joint_App_1_Dep__c</fullName>
        <label>Joint App 1 Dep</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joint_App_2_Dep_ONS__c</fullName>
        <label>Joint App 2 Dep ONS</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joint_App_2_Dep__c</fullName>
        <label>Joint App 2 Dep</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joint_App_3_Dep_ONS__c</fullName>
        <label>Joint App 3 Dep ONS</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joint_App_3_Dep__c</fullName>
        <label>Joint App 3 Dep</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joint_App_ONS__c</fullName>
        <label>Joint App ONS</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joint_App__c</fullName>
        <label>Joint App</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LookupField__c</fullName>
        <label>LookupField</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_payment_percent__c</fullName>
        <label>Monthly payment percent</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_within_months__c</fullName>
        <description>If a debt is to be paid off within x number of months, the debt will be excluded from affordibility</description>
        <label>Paid within months</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Debt__c</fullName>
        <label>Personal Debt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remove_from_Affordability_Income__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ticking this removes the amount from the affordability income calculation</inlineHelpText>
        <label>Remove from Affordability Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowOnAppForm__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ShowOnAppForm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SingleApp_ONS__c</fullName>
        <label>SingleApp ONS</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SingleApp__c</fullName>
        <label>SingleApp</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>BudgetPlannerConfig</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>SingleApp__c</columns>
        <columns>SingleApp_ONS__c</columns>
        <columns>Joint_App__c</columns>
        <columns>Joint_App_1_Dep__c</columns>
        <columns>Joint_App_1_Dep_ONS__c</columns>
        <columns>Joint_App_2_Dep__c</columns>
        <columns>Joint_App_2_Dep_ONS__c</columns>
        <columns>Joint_App_3_Dep__c</columns>
        <columns>Joint_App_3_Dep_ONS__c</columns>
        <columns>Joint_App_ONS__c</columns>
        <columns>Remove_from_Affordability_Income__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>BudgetPlannerConfig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BudgetPlannerConfigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>